Mejorados más los tests, alcanzando una cobertura > 90% de los servicios (solo los servicios de back-base, faltan los demás microservicios)